--- a/style.css
+++ b/style.css
@@ -9,22 +9,25 @@ body {
     background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
     padding: 20px;
 }
-
+h1{
+    text-align: center;
+}
 .container {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.664);
     display: grid;
     grid-template-columns: repeat(3fr, 4);
     grid-template-rows: repeat(3fr, 7);
     text-align: center;
     gap: 5px;
     margin: auto;
-    width: 600px;
+    min-width: 400px;
     /* max-width: 500px; */
-    height: 600px;
-    margin-top: 100px;
+    min-height: 600px;
+    /* margin-top: 100px; */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .item-0 {
@@ -204,3 +207,4 @@ button {
     border: none;
     padding: 10px;
 }
+
