--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 body {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     background-image: linear-gradient(to top, #37ecba 0%, #72afd3 100%);
-    padding: 20px;
+    /* padding: 20px; */
 }
+
 h1{
     text-align: center;
 }
@@ -20,14 +21,16 @@ h1{
     text-align: center;
     gap: 5px;
     margin: auto;
-    min-width: 400px;
+    /* min-width: 300px; */
+    width: 420px;
     /* max-width: 500px; */
-    min-height: 600px;
+    min-height: 500px;
     /* margin-top: 100px; */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
+ 
 }
 
 .item-0 {
